Added convolution, RPCA and utility file modifications

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+*.zip
+*.txt
+*.bat
+*.*~
+*.gz
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
